# ethercat-cli

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile_consumer.py
src/: ethercat.cpp  ethercat.h  main.c  main.cpp  pdo.cpp  pdo.h
